# exercicio-01-06-2020

./: .gitignore  README.md  main.py  pyproject.toml  test.txt
app/: dao.py  models.py  util.py
app/test/: test_categoria.py  test_produto.py
